# SEngine

./: .gitignore  CMakeLists.txt  CMakeLists.txt.example  README.md
include/: systemType.h
src/: CMakeLists.txt  main.cpp
src/Abstracts/: Command.cpp  Observer.cpp  Singleton.cpp
src/Graphics/: Window.cpp
src/Kernel/: Engine.cpp
src/Kernel/Controller/: AbstractController.cpp  ControllerFabric.cpp
src/Kernel/Controller/PC/: PCController.cpp
src/Logging/: Logger.cpp
src/ai/: AIManager.cpp
src/audio/: AudioEngine.cpp
src/commands/: CloseGame.cpp
src/controllers/: MainCharacterController.cpp
src/core/: GameController.cpp  GameEngine.cpp  GameLoop.cpp
src/event/: EventManager.cpp
src/graphics/: Mesh.cpp  Renderer.cpp  Shader.cpp  Window.cpp
src/input/: InputAdapter.cpp  InputAdapter.h  InputManager.cpp  README.MD
src/input/controlls/: Joystick.cpp  Keyboard.cpp  Mouse.cpp
src/kernel/: Animation.cpp  Collider.cpp  Collision.cpp  DrawObject.cpp  EventManager.cpp  Game.cpp  GameEngine.cpp  GameLoop.cpp  Level.cpp  Menu.cpp  Script.cpp  UIElement.cpp
src/kernel/event/: EventManager.cpp
src/kernel/graphics/: Window.cpp
src/kernel/objects/game/animations/: SpriteAnimation.cpp
src/kernel/objects/map/: AbstractMap.cpp  MapTile.cpp
src/kernel/scene/: Scene.cpp
src/kernel/ui/: Button.cpp  Menu.cpp  UIElement.cpp
src/levels/HelloWorld/: HelloWorld.cpp
src/menu/shared/: MenuButton.cpp
src/menu/start/: StartMenu.cpp
src/menu/start/elements/: ExitButton.cpp  StartButton.cpp
src/networking/: NetworkManager.cpp
src/objects/: StaticObject.cpp
src/objects/character/: Character.cpp
src/objects/game/animations/: SpriteAnimation.cpp
src/objects/game/animations/character/: Animation.cpp
src/objects/game/character/: Character.cpp  MainCharacter.cpp
src/objects/game/environment/: Background.cpp
src/objects/main_character/: MainCharacter.cpp
src/objects/main_character/animations/: Fall.cpp  Jump.cpp  Moving.cpp  StandBy.cpp
src/objects/static/: Bush.cpp
src/physics/: Collider.cpp  PhysicsEngine.cpp
src/recources/: ResourceManager.cpp
src/scene/: GameObject.cpp  Scene.cpp
src/scripting/: ScriptingEngine.cpp
(+125 files in other folders)
